// ============================================================================
// Queens Match - MVP database schema
// ============================================================================
// Prisma version: server/package.json pins prisma / @prisma/client to
// 6.19.3. The generator/datasource syntax below is compatible with that
// version.
// ============================================================================

generator client {
  provider = "prisma-client-js"
}


datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ----------------------------------------------------------------------------
// Enums
// ----------------------------------------------------------------------------

// Lifecycle of a mentee's request to a specific mentor. Reused across
// rescheduling iterations rather than replaced by a new model each time.
enum MentoringRequestStatus {
  WAITING_FOR_MENTOR_SLOTS // mentor has not yet offered times
  WAITING_FOR_MENTEE_SELECTION // mentor offered times, mentee has not chosen
  REJECTED // mentor rejected the request
  MATCHED // mentee selected a slot, a Meeting exists
  ATTENDANCE_CONFIRMED // both sides confirmed attendance for the current meeting
  COMPLETED // meeting happened and is done
  NOT_COMPLETED // meeting did not happen
  FEEDBACK_COMPLETED // both sides submitted feedback
  CANCELLED // process ended without a completed meeting
}

// One round of "mentor offers slots -> mentee picks one" within a request.
enum SchedulingRoundType {
  INITIAL // first set of slots offered for the request
  EXTRA_SLOTS // mentee asked for additional times (allowed once, enforced in backend)
  RESCHEDULE_BEFORE_MEETING // either side reported the matched time no longer works
  RESCHEDULE_AFTER_NO_SHOW // meeting did not happen and both sides want another try
}

enum MeetingStatus {
  SCHEDULED
  ATTENDANCE_CONFIRMED
  COMPLETED
  NOT_COMPLETED
  RESCHEDULED
  CANCELLED
}

enum AttendanceStatus {
  PENDING
  CONFIRMED
  DECLINED
}

enum NotificationType {
  MENTORING_REQUEST_RECEIVED // mentor notified of a new request
  REQUEST_REJECTED // mentee notified of rejection
  SLOTS_AVAILABLE // mentee notified that times are ready to choose
  MEETING_MATCHED // mentor notified a slot was selected
  RESCHEDULE_REQUIRED // other participant notified rescheduling is needed
  MEETING_REMINDER // WhatsApp/in-app reminder before the meeting
  ATTENDANCE_CONFIRMATION_REQUEST // ask both sides to confirm attendance
  POST_MEETING_CHECK // ask both sides whether the meeting happened
  FEEDBACK_REMINDER // recurring reminder (every two days) to submit feedback
  MENTOR_THANK_YOU // automatic thank-you message to the mentor
  MEETING_CANCELLED_BY_MENTOR // mentee notified when her mentor cancels
}

enum NotificationChannel {
  IN_APP
  EMAIL
  WHATSAPP
}

enum NotificationStatus {
  PENDING
  SENT
  FAILED
}

// ----------------------------------------------------------------------------
// Core identity
// ----------------------------------------------------------------------------

// One account per person. A User is a mentor iff a MentorProfile exists for
// them, and an admin iff isAdmin is true. These are independent flags/relations
// on purpose: the same person can simultaneously be a mentee (via
// MentoringRequest.mentee), a mentor (via mentorProfile), and an admin.
model User {
  id                Int      @id @default(autoincrement())
  email             String   @unique
  passwordHash      String
  fullName          String
  background        String   @default("לא צוין")
  jobTitle          String?
  workplace         String?
  yearsOfExperience Int?
  profileImageUrl   String?
  githubUrl         String?
  linkedinUrl       String?
  // Not part of the original registration requirements. Inferred solely from
  // the later requirement to send WhatsApp reminders - confirm with product
  // owner whether/when this should actually be collected.
  phoneNumber       String?
  isAdmin           Boolean  @default(false)
  createdAt         DateTime @default(now())
  updatedAt         DateTime @updatedAt

  technologies  Technology[]
  mentorProfile MentorProfile?

  // Requests this user filed as a MENTEE. The mentor side of a request is
  // reached through MentorProfile.user, not a second direct relation here -
  // this keeps "mentee" and "mentor" from colliding into one ambiguous
  // User<->MentoringRequest relation.
  mentoringRequestsAsMentee MentoringRequest[]

  attendanceConfirmations     AttendanceConfirmation[]
  meetingOutcomeConfirmations MeetingOutcomeConfirmation[]
  feedbackAuthored            Feedback[]
  notifications               Notification[]
  adminAlertResolutions       AdminAlertResolution[]
  assignedAdminAlerts         AdminAlertResolution[] @relation("AssignedAdminAlerts")
}

// Extendable, normalized list of languages/technologies. Never a
// comma-separated string on User.
model Technology {
  id    Int    @id @default(autoincrement())
  name  String @unique
  users User[]
}

// ----------------------------------------------------------------------------
// Mentor side
// ----------------------------------------------------------------------------

// Existence of this row is what makes a User a mentor - no isMentor flag.
// Holds only mentoring-specific data; identity fields (name/email/etc.) stay
// on User and are reached via the `user` relation.
model MentorProfile {
  id     Int  @id @default(autoincrement())
  userId Int  @unique
  user   User @relation(fields: [userId], references: [id])

  background             String
  // Number of meetings the mentor is willing to provide per calendar month.
  // Usage is counted from meetings scheduled inside that month, so the quota
  // resets on the 1st and a cancelled or rescheduled meeting frees its seat.
  meetingCapacity        Int
  meetingDurationMinutes Int
  isActive               Boolean @default(true)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  mentoringTopics           MentoringTopic[]
  mentoringRequestsReceived MentoringRequest[]
}

// Open-ended mentoring areas (mock interviews, career planning, a specific
// company, etc.). A table rather than an enum so it stays extendable without
// a schema/migration change.
model MentoringTopic {
  id   Int    @id @default(autoincrement())
  name String @unique

  mentorProfiles MentorProfile[]
}

// ----------------------------------------------------------------------------
// Mentoring lifecycle
// ----------------------------------------------------------------------------

// A mentee's interest in a specific mentor and everything that follows from
// it. Whether the mentee User is also a mentor elsewhere, or is requesting
// her own MentorProfile, is intentionally not restricted here - that
// validation belongs to backend business logic.
model MentoringRequest {
  id Int @id @default(autoincrement())

  menteeId Int
  mentee   User @relation(fields: [menteeId], references: [id])

  mentorProfileId Int
  mentorProfile   MentorProfile @relation(fields: [mentorProfileId], references: [id])

  status MentoringRequestStatus

  // Set when the mentor knowingly offered times while already at her monthly
  // capacity, so the mentee's selection is allowed past the capacity check.
  capacityOverride Boolean @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  schedulingRounds SchedulingRound[]
  // A request can go through several scheduled meeting attempts over its
  // lifetime (matched, rescheduled, no-show, matched again) - intentionally
  // one-to-many, never one-to-one.
  meetings         Meeting[]
  notifications    Notification[]

  @@index([status])
  @@index([menteeId])
  @@index([mentorProfileId])
}

// One iteration of "mentor offers times" within a request's lifecycle.
// How many times each type is allowed to recur (e.g. EXTRA_SLOTS only once)
// is a backend rule, not enforced by this table.
model SchedulingRound {
  id Int @id @default(autoincrement())

  requestId Int
  request   MentoringRequest @relation(fields: [requestId], references: [id])

  roundNumber Int
  type        SchedulingRoundType

  createdAt DateTime @default(now())

  offeredSlots OfferedSlot[]

  // Prevents the same request from ever recording the same round number twice.
  @@unique([requestId, roundNumber])
}

// Candidate time slots the mentor proposes for a round. No `isSelected` flag:
// the chosen slot is whichever one a Meeting points to via selectedSlotId.
model OfferedSlot {
  id Int @id @default(autoincrement())

  schedulingRoundId Int
  // Slots are disposable data scoped to their round; deleting a round may
  // reasonably take its slots with it.
  schedulingRound   SchedulingRound @relation(fields: [schedulingRoundId], references: [id], onDelete: Cascade)

  startTime DateTime
  endTime   DateTime

  createdAt DateTime @default(now())

  meeting Meeting?

  @@index([schedulingRoundId])
}

// One scheduled attempt belonging to a request. Mentee/mentor identities are
// never duplicated here - reach them via request.mentee and
// request.mentorProfile.user.
model Meeting {
  id Int @id @default(autoincrement())

  requestId Int
  request   MentoringRequest @relation(fields: [requestId], references: [id])

  // Which offered slot the mentee picked, when this attempt came from one.
  selectedSlotId Int?         @unique
  selectedSlot   OfferedSlot? @relation(fields: [selectedSlotId], references: [id])

  // 1st, 2nd, ... attempt for this request (initial meeting, then any
  // reschedules), unique per request.
  attemptNumber Int

  scheduledStart DateTime
  scheduledEnd   DateTime
  status         MeetingStatus

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  attendanceConfirmations AttendanceConfirmation[]
  outcomeConfirmations    MeetingOutcomeConfirmation[]
  feedback                Feedback[]
  notifications           Notification[]

  @@unique([requestId, attemptNumber])
  @@index([scheduledStart])
  @@index([status])
}

// One row per participant per meeting, confirming intent to attend. Whether
// a given User is actually a participant of that specific meeting is a
// backend check, not a schema constraint.
model AttendanceConfirmation {
  id Int @id @default(autoincrement())

  meetingId Int
  meeting   Meeting @relation(fields: [meetingId], references: [id])

  userId Int
  user   User @relation(fields: [userId], references: [id])

  status      AttendanceStatus
  confirmedAt DateTime?

  createdAt DateTime @default(now())

  @@unique([meetingId, userId])
}

// One row per participant per meeting, answering "did it happen?" and,
// if not, "do you want another attempt?". The backend combines both
// participants' answers to decide the next status transition.
model MeetingOutcomeConfirmation {
  id Int @id @default(autoincrement())

  meetingId Int
  meeting   Meeting @relation(fields: [meetingId], references: [id])

  userId Int
  user   User @relation(fields: [userId], references: [id])

  occurred        Boolean
  wantsReschedule Boolean?

  answeredAt DateTime @default(now())

  @@unique([meetingId, userId])
}

// Free-form questionnaire answers, since the exact feedback questions are not
// yet defined. Storing Json avoids inventing rating columns that may not
// match the eventual questionnaire.
model Feedback {
  id Int @id @default(autoincrement())

  meetingId Int
  meeting   Meeting @relation(fields: [meetingId], references: [id])

  authorId Int
  author   User @relation(fields: [authorId], references: [id])

  answers Json

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([meetingId, authorId])
}

// History of notifications/reminders scheduled or sent to a user. A record
// store only - no delivery, WhatsApp integration, or recurrence scheduling is
// implemented here; that logic reads/writes rows in this table.
model Notification {
  id Int @id @default(autoincrement())

  recipientId Int
  recipient   User @relation(fields: [recipientId], references: [id])

  requestId Int?
  request   MentoringRequest? @relation(fields: [requestId], references: [id])

  meetingId Int?
  meeting   Meeting? @relation(fields: [meetingId], references: [id])

  type    NotificationType
  channel NotificationChannel
  status  NotificationStatus  @default(PENDING)

  scheduledAt  DateTime?
  sentAt       DateTime?
  errorMessage String?

  createdAt DateTime @default(now())

  @@index([status])
  @@index([scheduledAt])
}

// Admin-only acknowledgement for derived operational alerts. Alerts are
// generated from source records; a resolution stays valid while materializedAt
// still matches the current source record state.
model AdminAlertResolution {
  id Int @id @default(autoincrement())

  alertKey       String   @unique
  alertType      String
  entityType     String
  entityId       Int
  materializedAt DateTime
  resolvedAt     DateTime @default(now())

  resolvedById Int
  resolvedBy   User @relation(fields: [resolvedById], references: [id])

  priority        String   @default("normal")
  assignedAdminId Int?
  assignedAdmin   User?    @relation("AssignedAdminAlerts", fields: [assignedAdminId], references: [id])
  notes           String?
  queueUpdatedAt  DateTime @default(now())

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([alertType])
  @@index([entityType, entityId])
  @@index([resolvedById])
  @@index([assignedAdminId])
  @@index([priority])
}
